[package]
name = "telemetry-over-p2p-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17.0" , features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
libp2p = { version = "0.42.0", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
anyhow = "1"